fix headers for dark mode

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ Dark Green:    #2D630D
 */
 :root {
   --col-bg-main: #261441;
+  --col-bg-toolbar: #111e;
 }
 html {
   background-color: var(--col-bg-main);
@@ -169,7 +170,7 @@ footer .flex a {
 	font-size: 50px;
 	height: 50px;
 }
-.centered-popout{
+.centered-popout {
 	border-radius: 10px;
 	width: 90vw;
 	margin-top: 30px;
@@ -177,7 +178,21 @@ footer .flex a {
 	box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.75);
 	-webkit-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.75);
-	background-color: rgba(255,255,255,0.8)
+	background-color: #333b;
+  position: relative;
+}
+.centered-popout.background::before {
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: var(--bg);
+  background-position: center;
+  background-size: cover;
+  filter: brightness(1);
+  z-index: -1;
 }
 hr{
 	width: 100%;
@@ -285,33 +300,43 @@ h3{
 .names-container > div {
 	padding: 2%;
 	text-align: center;
-	width: 21%;
+  min-width: 360px;
+	width: 40%;
+  max-width: 100%;
+  margin: 0 0 40px;
+}
+@media only screen and (max-width: 1116px){
+  .names-container > div {
+    width: 80%;
+  }
 }
 @media only screen and (max-width: 850px){
 	.names-container > div {
-		width: 46%;
+		width: 50%;
 	}
 }
 @media only screen and (max-width: 500px){
 	.names-container > div {
+    min-width: unset;
 		width: 96%;
 	}
 }
 .names-container{
 	max-width: 100vw;
 	flex-wrap: wrap;
-	justify-content:center;
+	justify-content: space-around;
 }
 h4{
-	color: #666;
+	color: #ccc;
 	padding: 0px;
 	margin: 0px;
 }
-.person{
+.person {
 	width: 180px;
   height: 180px;
   object-fit: cover;
-  object-position: 0% 0%;
+  object-position: top;
+  border-radius: 32px;
 }
 .link{
 	text-decoration:none;
@@ -622,18 +647,21 @@ h3.sponsor-title{
     width: 100%;
     justify-content: right;
     align-items: right;
-    background-color: white;
+    background-color: var(--col-bg-toolbar);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
   }
   .topnav.responsive{
     position: fixed;
     top: 50px;
     right: 0px;
-    background-color: white;
+    background-color: var(--col-bg-toolbar);
   }
   .topnav.responsive .menu-item {
     display: block;
     flex-wrap: wrap;
     flex-direction: row;
+    color: #eee;
   }
   
 }
@@ -653,12 +681,12 @@ h3.sponsor-title{
 	width: 100%;
 	display: flex;
 	justify-content: left;
-	background-color: white;
+	background-color: var(--col-bg-toolbar);
   box-shadow: 0px 0px 8px 0px rgb(0 0 0);
 }
 .menu-item{
 	margin: 0px 12px;
-	color: black;
+	color: #eee;
 	cursor: pointer;
 	position: relative;
 	text-decoration: none;
@@ -729,15 +757,18 @@ h3.sponsor-title{
   }
 }
 #menu-on-small{
-  width: 100vw;
+  width: calc(100vw + 16px);
   top: 70px;
+  left: 50%;
+  transform: translateX(-50%);
   position: fixed;
-  background-color: white;
+  background-color: var(--col-bg-toolbar);
   z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0px 0px 8px 0px rgb(0 0 0);
+  /* box-shadow: 0px 0px 8px 0px rgb(0 0 0); */
+  box-shadow: 0 5px 8px -2px black;
 }
 #menu-on-small > a{
   margin-bottom: 20px;
